# accelerated-data-science

./: .coveragerc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README-development.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  dev-requirements.txt  log.txt  models.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  test-requirements-operators.txt  test-requirements.txt  test_inference.py  test_mmd.py  test_mmd2.py  tox.ini
.agents/: README.md
.agents/examples/: jira-ticket-to-pr.md  python-3.14-support-ticket.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: add-3plicense-warning.yml  codeql.yml  macaron.yml  publish-to-pypi.yml  publish-to-readthedocs.yml  run-forecast-explainer-tests.yml  run-forecast-unit-tests.yml  run-operators-unit-tests.yml  run-unittests-default_setup.yml  run-unittests-py310-py311.yml  run-unittests-py310-py312.yml  run-unittests-py38-cov-report.yml  run-unittests-py39-cov-report.yml  run-unittests-py39-py310.yml  run-unittests-py39-py312.yml  run-unittests.yml
ads/: __init__.py  ads  ads_version.json  cli.py  config.py  pandas_accessors.py
ads/ads_auth/: .gitignore  CONTRIBUTING.md  Makefile  README.md  THIRD_PARTY_LICENSES.txt  pyproject.toml
ads/ads_auth/ads/: __init__.py
ads/ads_auth/ads/auth/: __init__.py  auth.py
ads/ads_auth/tests/: __init__.py
ads/aqua/: __init__.py  app.py  aqua_deployment.py  aqua_model.py  attr.json  base.py  cli.py  constants.py  data.py  decorator.py  deployment.py  enums.py  eval_ft_base.py  evaluation.py  exception.py  fine_tune.py  finetune.py  job.py  model.py  ui.py  utils.py  version.json
ads/automl/: driver.py  provider.py
ads/bds/: auth.py  big_data_service.py
ads/catalog/: __init__.py  model.py  notebook.py  project.py  summary.py
ads/common/: __init__.py  analyzer.py  auth.py  automl_extractor.py  base_properties.py  card_identifier.py  config.py  data.py  data_serializer.py  deprecate.py  dsc_file_system.py  error.py  extended_enum.py  helper.py  ipython.py  keras_extractor.py  lightgbm_extractor.py  model.py  model_artifact.py  model_artifact_schema.json  model_export_util.py  model_info_extractor.py  model_info_extractor_factory.py  model_introspect.py  model_metadata.py  model_metadata_mixin.py  object_storage_details.py  oci_client.py  oci_datascience.py  oci_function.py  oci_logging.py  oci_mixin.py  oci_resource.py  pytorch_extractor.py  runtime_dependency.py  serializer.py  sklearn_extractor.py  tensorflow_extractor.py  utils.py  word_lists.py  (+2 more)
ads/data_labeling/: __init__.py  boundingbox.py  constants.py  data_labeling_service.py  metadata.py  ner.py  record.py  utils.py
ads/database/: connection.py
ads/dataflow/: __init__.py  dataflow.py  dataflowsummary.py
ads/dataset/: __init__.py  capabilities.md  classification_dataset.py  correlation.py  correlation_plot.py  dask_series.py  dataframe_transformer.py  dataset.py  dataset_accessor.py  dataset_browser.py  dataset_with_target.py  exception.py  factory.py  feature_engineering_transformer.py  feature_selection.py  forecasting_dataset.py  helper.py  label_encoder.py  pipeline.py  plot.py  progress.py  recommendation.py  recommendation_transformer.py  regression_dataset.py  sampled_dataset.py  target.py  timeseries.py
ads/dbmixin/: db_pandas_accessor.py
ads/environment/: ml_runtime.py
ads/evaluations/: README.md  __init__.py  evaluation_plot.py  evaluator.py  statistical_metrics.py
ads/explanations/: __init__.py  base_explainer.py  capabilities.md  explainer.py  mlx_global_explainer.py  mlx_interface.py  mlx_local_explainer.py  mlx_whatif_explainer.py
ads/feature_engineering/: __init__.py  data_schema.json  exceptions.py  feature_type_manager.py  schema.py  utils.py
ads/feature_store/: .readthedocs.yaml  Introduction_to_Feature_Store_Querying^ADS^Feature_Store.ipynb  Introduction_to_Feature_Store_Querying^ADS^Feature_Store_local.ipynb  Introduction_to_Feature_Store_Quickstart^ADS^Querying^Feature_Store.ipynb  Introduction_to_Feature_Store_Quickstart^ADS^Querying^Feature_Store_local.ipynb  README.md  __init__.py  dataset.py  dataset_job.py  entity.py  feature.py  feature_group.py  feature_group_expectation.py  feature_group_job.py  feature_option_details.py  feature_stat.py  feature_store.py  feature_store_registrar.py  input_feature_detail.py  model_details.py  statistics.py  statistics_config.py  stream_config.py  test.ipynb  test_feature_store.ipynb  test_fs.ipynb  transformation.py  validation_output.py
ads/hpo/: _imports.py  ads_search_space.py  distributions.py  objective.py  search_cv.py  stopping_criterion.py  tuner_artifact.py  utils.py  validation.py
ads/jobs/: __init__.py  ads_job.py  cli.py  env_var_parser.py  extension.py  serializer.py  utils.py
ads/llm/: __init__.py  chain.py  chat_template.py  deploy.py  load.py  parsers.py  patch.py  requirements.txt  serialize.py
ads/mloperator/: README.md  __init__.py  cli.py  cmd.py  mloperator.py
ads/model/: __init__.py  artifact.py  artifact_downloader.py  artifact_uploader.py  base_properties.py  datascience_model.py  datascience_model_group.py  generic_model.py  model_collection.py  model_description.py  model_file_description_schema.json  model_introspect.py  model_metadata.py  model_metadata_mixin.py  model_properties.py  model_version_set.py
ads/model_artifact_boilerplate/: score.py
ads/mysqldb/: mysql_db.py
ads/opctl/: __init__.py  anomaly_detection.py  cli.py  cmds.py  constants.py  forecast.py  index.yaml  schema.yaml.yml  script.py  utils.py
ads/oracledb/: oracle_db.py
ads/pipeline/: __init__.py  cli.py  (+4 more)
anomaly_out/: anomali_2_test.csv
docs/: Makefile  README.md  jira-ticket-template.md  python313-support-scope.md  python314-support-scope.md  requirements.txt
requirements/: dev.txt  docs.txt  operators.txt  test.txt
tests/: conftest.py
yaml/: containerRuntime.yaml  gitPythonRuntime.yaml  notebookRuntime.yaml  scriptRuntime.yaml
(+2090 files in other folders)
