## This file created and used instead of setup.py for building and installing ads package. This change is to
## follow best practive to "not invoke setup.py directly", see detailed explanation why here:
## https://blog.ganssle.io/articles/2021/10/setup-py-deprecated.html.
## Check README-development.md and Makefile for instruction how to install or build ADS locally.

[build-system]
# PEP 517 – A build-system independent format for source trees - https://peps.python.org/pep-0517/
# Till recently flit-core library was suggested by pip, so we used it. In future, cosider to change to
# other, if better, build-backend library.
requires = [
  "flit-core >=3.8,<4",
] # should specify <4, so won’t be impacted by changes in the next major version
build-backend = "flit_core.buildapi"


[project]
# Declaring project metadata
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# PEP 621 – Storing project metadata in pyproject.toml - https://peps.python.org/pep-0621/
# PEP 518 – Specifying Minimum Build System Requirements for Python Projects https://peps.python.org/pep-0518/

# Required
name = "oracle_ads" # the install (PyPI) name; name for local build in [tool.flit.module] section below
version = "2.15.2"

# Optional
description = "Oracle Accelerated Data Science SDK"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
authors = [{ name = "Oracle Data Science" }]
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
keywords = [
  "Oracle Cloud Infrastructure",
  "OCI",
  "Machine Learning",
  "ML",
  "Artificial Intelligence",
  "AI",
  "Data Science",
  "Cloud",
  "Oracle",
  "GenAI",
  "Generative AI",
  "Forecast",
  "Anomaly",
  "Document Understanding",
  "Anomaly Detection",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

# PEP 508 – Dependency specification for Python Software Packages - https://peps.python.org/pep-0508/
# In dependencies se "<library>; platform_machine == 'aarch64'" to specify ARM underlying platform
# Copied from install_requires list in setup.py, setup.py got removed in favor of this config file
dependencies = [
  "PyYAML>=6.0.1",                         # pyyaml 5.4 is broken with cython 3
  "asteval>=0.9.25",
  "cerberus>=1.3.4",
  "cloudpickle>=1.6.0",
  "fsspec>=0.8.7",
  "gitpython>=3.1.2",
  "jinja2>=2.11.2",
  "matplotlib>=3.1.3",
  "numpy>=1.19.2",
  "oci>=2.148.0",
  "ocifs>=1.1.3",
  "pandas>=2.2.0,<3.0.0",
  "psutil>=5.7.2",
  "python_jsonschema_objects>=0.3.13",
  "requests",
  "scikit-learn>=1.0",
  "tabulate>=0.8.9",
  "tqdm>=4.59.0",
  "pydantic>=2.6.3",
  "tenacity",
  "httpx",
  "packaging>=21.0",
]

[project.optional-dependencies]
# Copied from extras_require list in setup.py, setup.py got removed in favor of this config file
bds = ["hdfs[kerberos]", "ibis-framework[impala]", "sqlalchemy"]
boosted = [
  "lightgbm",
  "xgboost",
  "scikit-learn>=1.0,<1.6.0",
]
data = [
  "datefinder>=0.7.1",
  "fastavro>=0.24.2",
  "htmllistparse>=0.6.0",
  "openpyxl>=3.0.7",
  "oracledb>=1.0",
  "pandavro>=1.6.0",
  "sqlalchemy>=1.4.1,<=1.4.46",
]
geo = [
  # Deferred for Python 3.13: fiona<=1.9.6 requires GDAL headers/config when no compatible wheel is available.
  "geopandas<1.0.0; python_version < '3.13'",  # in v1.0.0 removed the built-in dataset 'naturalearth_lowres', fix when relax version of geopandas needed
  "fiona<=1.9.6; python_version < '3.13'",
  "oracle_ads[viz]; python_version < '3.13'"
]
huggingface = [
  "transformers",
  "tf-keras"  # Keras 3 installed in py3.11+, but this is not yet supported in Transformers. Need to install the backwards-compatible tf-keras
]
notebook = [
  "ipython",
  "ipywidgets",
  "scikit-learn>=1.0,<1.6.0"
]
onnx = [
  # Deferred for Python 3.13: onnx still builds from source in CI and fails wheel creation.
  "lightgbm; python_version < '3.13'",
  "onnx>=1.12.0,<=1.15.0; python_version < '3.12'",  # v 1.15.0 set base on onnxrutime version and onnx opset support - https://onnxruntime.ai/docs/reference/compatibility.html#onnx-opset-support
  "onnx~=1.17.0; python_version >= '3.12' and python_version < '3.13'",  # v 1.15.0 set base on onnxrutime version and onnx opset support - https://onnxruntime.ai/docs/reference/compatibility.html#onnx-opset-support
  "onnxmltools~=1.13.0; python_version < '3.13'",
  "onnxruntime~=1.17.0,!=1.16.0; python_version < '3.12'",  # v1.17.0 used in Oracle Database 23ai; avoid v1.16 https://github.com/microsoft/onnxruntime/issues/17631, revealed by unit tests
  "onnxruntime~=1.22.0; python_version >= '3.12' and python_version < '3.13'",  # v1.17.0 used in Oracle Database 23ai; avoid v1.16 https://github.com/microsoft/onnxruntime/issues/17631, revealed by unit tests
  "oracle_ads[viz]; python_version < '3.13'",
  "protobuf; python_version < '3.13'",
  "skl2onnx>=1.10.4; python_version < '3.12'",
  "skl2onnx~=1.18.0; python_version >= '3.12' and python_version < '3.13'",
  "tf2onnx; python_version < '3.13'",
  "xgboost<=1.7; python_version < '3.13'",
  "scikit-learn>=1.0,<1.6.0; python_version < '3.13'",
]
opctl = [
  "conda-pack",
  "docker",
  "inflection",
  "nbconvert",
  "nbformat",
  "oci-cli>=3.89.1",
  "py-cpuinfo",
  "rich",
  "fire",
  "cachetools",
  "huggingface_hub>=0.36.2,<0.37"
]
optuna = ["optuna==2.9.0", "oracle_ads[viz]"]
spark = ["pyspark>=3.0.0"]
tensorflow = [
  "oracle_ads[viz]",
  "tensorflow<=2.15.1; python_version < '3.12'",  # v2.16.1 with consequence on tf2onnx v1.16.1 (latest) has an issue with Keras 3 installed in py3.11+ (https://github.com/onnx/tensorflow-onnx/issues/2319)
  "tensorflow; python_version >= '3.12'"  # v2.16.1 with consequence on tf2onnx v1.16.1 (latest) has an issue with Keras 3 installed in py3.11+ (https://github.com/onnx/tensorflow-onnx/issues/2319)
]
text = [
  # Deferred for Python 3.13: the current spaCy/thinc/blis stack does not resolve cleanly.
  "spacy>=3.4.2,<3.8; python_version < '3.13'",   # the first version of spacy that supports python 3.11 is spacy v3.4.2; 3.8.2 has dependency conflict.
  "wordcloud>=1.8.1; python_version < '3.13'"
]
torch = [
  "oracle_ads[viz]",
  "torch",
  "torchvision"
]
viz = [
  "bokeh",
  "folium>=0.12.1",
  "graphviz<0.17",
  "scipy>=1.5.4",
  "seaborn>=0.11.0",
]
forecast = [
  # Deferred for Python 3.13: the current stack forces NumPy 1.x and older time-series packages.
  "conda-pack; python_version < '3.13'",
  "inflection; python_version < '3.13'",
  "nbconvert; python_version < '3.13'",
  "nbformat; python_version < '3.13'",
  "oci-cli; python_version < '3.13'",
  "py-cpuinfo; python_version < '3.13'",
  "rich; python_version < '3.13'",
  "autots; python_version < '3.13'",
  "mlforecast==1.0.2; python_version < '3.13'",
  "neuralprophet>=0.7.0; python_version < '3.13'",
  "pytorch-lightning==2.5.5; python_version < '3.13'",
  "numpy<2.0.0; python_version < '3.13'",
  "oci-cli; python_version < '3.13'",
  "optuna; python_version < '3.13'",
  "pmdarima; python_version < '3.13'",
  "prophet==1.1.7; python_version < '3.13'",
  "cmdstanpy==1.2.5; python_version < '3.13'",
  "xgboost<3.0.0; python_version < '3.13'",
  "shap; python_version < '3.13'",
  "sktime; python_version < '3.13'",
  "statsmodels; python_version < '3.13'",
  "plotly; python_version < '3.13'",
  "oracledb; python_version < '3.13'",
  "report-creator==1.0.37; python_version < '3.13'",
]
anomaly  = [
  # Deferred for Python 3.13: Merlion and the scikit-learn cap need a focused compatibility update.
  "oracle_ads[opctl]; python_version < '3.13'",
  "autots; python_version < '3.13'",
  "oracledb; python_version < '3.13'",
  "report-creator==1.0.37; python_version < '3.13'",
  "rrcf==0.4.4; python_version < '3.13'",
  "scikit-learn<1.6.0; python_version < '3.13'",
  "salesforce-merlion[all]==2.0.4; python_version < '3.13'"
]
recommender = [
  # Deferred for Python 3.13: scikit-surprise native build/wheel support needs validation.
  "oracle_ads[opctl]; python_version < '3.13'",
  "scikit-surprise; python_version < '3.13'",
  "plotly; python_version < '3.13'",
  "report-creator==1.0.37; python_version < '3.13'",
]
regression = [
  # Deferred for Python 3.13 because regression composes the deferred forecast extra.
  "oracle_ads[opctl,forecast]; python_version < '3.13'"
]
pii = [
  # Deferred for Python 3.13: older spaCy, spaCy transformers, and scrubadub pins need review.
  "aiohttp; python_version < '3.13'",
  "gender_guesser; python_version < '3.13'",
  "nameparser; python_version < '3.13'",
  "oracle_ads[opctl]; python_version < '3.13'",
  "plotly; python_version < '3.13'",
  "scrubadub==2.0.1; python_version < '3.13'",
  "scrubadub_spacy; python_version < '3.13'",
  "spacy-transformers==1.2.5; python_version < '3.13'",
  "spacy==3.6.1; python_version < '3.13'",
  "report-creator>=1.0.37; python_version < '3.13'",
]
llm = ["langchain>=0.2", "langchain-community", "langchain_openai", "pydantic>=2,<3", "evaluate>=0.4.0"]
aqua = [
  "jupyter_server",
  "tornado",
  "notebook>=6.4,<=6.6",
  "fire",
  "cachetools",
  "huggingface_hub>=0.36.2,<0.37",
  "python-dotenv",
  "rich",
  "openai==1.109.1"
]

# To reduce backtracking (decrese deps install time) during test/dev env setup reducing number of versions pip is
# trying to use. Ref - https://pip.pypa.io/en/stable/topics/dependency-resolution/#possible-ways-to-reduce-backtracking.
# Revisit this section continuously and update to recent version of libraries. focus on pyt3.9/3.10 versions.
testsuite = [
  "arff",
  "autogen-agentchat<0.4",
  "category_encoders==2.6.3",  # set version to avoid backtracking
  "cohere==4.53",  # set version to avoid backtracking
  "faiss-cpu",
  "fastparquet==2024.2.0",  # set version to avoid backtracking
  "imbalanced-learn",
  "lxml",
  "mysql-connector-python",
  "nltk",
  "notebook==6.4.12",
  "opensearch-py",
  "pdfplumber",
  "py4j",
  "pyarrow>=15.0.0",
  "statsmodels>=0.14.1",
  "tables>3.9.0",
  "xlrd>=1.2.0",
  "sktime",
  "report-creator==1.0.37",
]


[project.urls]
"Github" = "https://github.com/oracle/accelerated-data-science"
"Documentation" = "https://accelerated-data-science.readthedocs.io/en/latest/index.html"

[project.scripts]
ads = "ads.cli:cli"

[tool.flit.module]
name = "ads" # name for local build and import, see https://flit.pypa.io/en/latest/pyproject_toml.html#module-section

[tool.flit.sdist]
# By default `ads` folder and `LICENSE.txt` file included in sdist. Folders `docs` and `tests` are excluded, as weel as other project files
# Use this section to include/exclude files and folders. See doc: https://flit.pypa.io/en/latest/pyproject_toml.html#sdist-section
include = ["THIRD_PARTY_LICENSES.txt"]

# Configuring Ruff (https://docs.astral.sh/ruff/configuration/)
[tool.ruff]
fix = true

[tool.ruff.lint]
exclude = ["*.yaml", "*jinja2"]
# rules - https://docs.astral.sh/ruff/rules/
extend-ignore = ["E402", "N806", "N803"]
ignore = [
  "S101",    # use of assert
  "B008",    # function call in argument defaults
  "B017",    # pytest.raises considered evil
  "B023",    # function definition in loop (TODO: un-ignore this)
  "B028",    # explicit stacklevel for warnings
  "C901",    # function is too complex (TODO: un-ignore this)
  "E501",    # from scripts/lint_backend.sh
  "PLR091",  # complexity rules
  "PLR2004", # magic numbers
  "PLW2901", # `for` loop variable overwritten by assignment target
  "SIM105",  # contextlib.suppress (has a performance cost)
  "SIM117",  # multiple nested with blocks (doesn't look good with gr.Row etc)
  "UP006",   # use `list` instead of `List` for type annotations (fails for 3.8)
  "UP007",   # use X | Y for type annotations (TODO: can be enabled once Pydantic plays nice with them)
]
extend-select = [
  "ARG",
  "B",
  "C",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "S101",
  "SIM",
  "UP",
  "W",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
